--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="wrap">
-      <header class="header"></header>
+      <header class="header">헤더진행중</header>
       <section class="visual"></section>
       <section class="community"></section>
       <section class="memebr">
