비주얼 작업을 진행하였어요.
체크 바랍니다.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="wrap">
       <header class="header">헤더진행중</header>
-      <section class="visual"></section>
+      <section class="visual">비주얼 작업 진행 중</section>
       <section class="community"></section>
       <section class="memebr">
         <ul>
