--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="wrap">
-      <header class="header">헤더진행중</header>
-      <section class="visual">비주얼 작업 진행 중</section>
-      <section class="community"></section>
-      <section class="memebr">
-        <ul>
-          <li>멤버목록</li>
-        </ul>
-      </section>
-      <footer class="footer"></footer>
-    </div>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+    </head>
+    <body>
+        <div class="wrap">
+            <header class="header">헤더진행중</header>
+            <section class="visual">비주얼 작업 진행 중</section>
+            <section class="community"></section>
+            <section class="memebr">
+                <ul>
+                    <li>조승현</li>
+                </ul>
+            </section>
+            <footer class="footer"></footer>
+        </div>
+    </body>
 </html>
