--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <section class="community"></section>
       <section class="memebr">
         <ul>
-          <li>멤버목록</li>
+          <li>허강현</li>
         </ul>
       </section>
       <footer class="footer"></footer>
