--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       <section class="community"></section>
       <section class="memebr">
         <ul>
-          <li>멤버목록</li>
+          <li>내이름은</li>
+          <li>최금옥</li>
+          <li>동주최씨입니다</li>
         </ul>
       </section>
       <footer class="footer"></footer>
