--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <section class="memebr">
         <ul>
           <li>멤버목록</li>
+          <li>옥지은</li>
+          <li>이예은</li>
+          <li>이효정</li>
         </ul>
       </section>
       <footer class="footer"></footer>
