이름작업완료

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <section class="community"></section>
       <section class="memebr">
         <ul>
-          <li>오한수</li>
+          <li>오한수.</li>
         </ul>
       </section>
       <footer class="footer"></footer>
