Revert "멤버목록 변경"
This reverts commit 1a581828e0eb0d4d58871f76d5165ab7b5f3c8e2.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <section class="community"></section>
       <section class="memebr">
         <ul>
-          <li>최지훈</li>
+          <li>멤버목록</li>
         </ul>
       </section>
       <footer class="footer"></footer>
