--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
       <section class="community"></section>
       <section class="memebr">
         <ul>
-          <li>내이름은</li>
-          <li>최금옥</li>
-          <li>동주최씨입니다</li>
+          <li>아름다운 이땅에</li>
+          <li>금수강산에</li>
+          <li>단군할아버지가 터잡으시고</li>
+          <li>황금보기를 돌같이하라</li>
         </ul>
       </section>
       <footer class="footer"></footer>
