혜영님 기능 추가

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
       <section class="community"></section>
       <section class="memebr">
         <ul>
+          <li>향후 여러분의 신체나이를 체크해주세요.</li>
           <li>김철호</li>
-          <li>이혜영</li>
+          <li>이혜영님이 업데이트를 하였습니다.기능업데이트 했어요.</li>
           <li>shj</li>
           <li>박시은</li>
           <li>오한수<b></b></li>
