--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <section class="community"></section>
       <section class="memebr">
         <ul>
+          <li>승현님 최신기술을 적용했어요. 적용해주세요.</li>
           <li>향후 여러분의 신체나이를 체크해주세요.</li>
           <li>김철호</li>
           <li>이혜영님이 업데이트를 하였습니다.기능업데이트 했어요.</li>
